# tkom-lang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  arithmetics_8h.html  arithmetics_8h.js  arithmetics_8h_source.html  block_8cpp.html  block_8h.html  block_8h.js  block_8h_source.html  build.sh  builtin_8h.html  builtin_8h.js  builtin_8h_source.html  builtin__defines_8h.html  builtin__defines_8h.js  builtin__defines_8h_source.html  builtin__helpers_8cpp.html  builtin__helpers_8cpp.js  builtin__helpers_8h.html  builtin__helpers_8h_source.html  builtins_8cpp.html  builtins_8cpp.js  callable_8h.html  callable_8h_source.html  classAssignStatement-members.html  classAssignStatement.html  classAssignStatement.js  classBinaryExpr-members.html  classBinaryExpr.html  classBinaryExpr.js  classBindFrtExpr-members.html  classBindFrtExpr.html  classBindFrtExpr.js  classBlock-members.html  (+382 more)
.github/workflows/: cmake-multi-platform.yml  docs.yml
cmake/: FetchGoogleTest.cmake
docs/ZPR/: final_docs.md
docs/html/: annotated.html  annotated_dup.js  arithmetics_8h_source.html  block_8h_source.html  builtin_8h_source.html  builtin__defines_8h_source.html  builtin__helpers_8h.html  builtin__helpers_8h.js  builtin__helpers_8h_source.html  callable_8h_source.html  classAssignStatement-members.html  classAssignStatement.html  classBinaryExpr-members.html  classBinaryExpr.html  classBindFrtExpr-members.html  classBindFrtExpr.html  classBlock-members.html  classBlock.html  classBlock.js  classBuiltIn-members.html  classBuiltIn.html  classBuiltIn.js  classCallExpr-members.html  classCallExpr.html  classCallStatement-members.html  classCallStatement.html  classCallable-members.html  classCallable.html  classCompilerError-members.html  classCompilerError.html  classCompilerException-members.html  classCompilerException.html  classCompilerWarning-members.html  classCompilerWarning.html  classConditionalStatement-members.html  classConditionalStatement.html  classElseStatement-members.html  classElseStatement.html  classExpression-members.html  classExpression.html  (+180 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_f.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+20 more)
docs/latex/: annotated.tex  arithmetics_8h_source.tex  block_8h_source.tex  builtin_8h_source.tex  builtin__defines_8h_source.tex  builtin__helpers_8h.tex  builtin__helpers_8h_source.tex  callable_8h_source.tex  classAssignStatement.eps  classAssignStatement.tex  classBinaryExpr.eps  classBinaryExpr.tex  classBindFrtExpr.eps  classBindFrtExpr.tex  classBlock.eps  classBlock.tex  classBuiltIn.eps  classBuiltIn.tex  classCallExpr.eps  classCallExpr.tex  classCallStatement.eps  classCallStatement.tex  classCallable.eps  classCallable.tex  classCompilerError.eps  classCompilerError.tex  classCompilerException.eps  classCompilerException.tex  classCompilerWarning.eps  classCompilerWarning.tex  classConditionalStatement.eps  classConditionalStatement.tex  classElseStatement.eps  classElseStatement.tex  classExpression.eps  classExpression.tex  classForLoopStatement.eps  classForLoopStatement.tex  classFuncSignature.eps  classFuncSignature.tex  (+105 more)
examples/: builtins_and_refs.tkom  high_order.tkom  incorrect.tkom  quadriatic.tkom  recur_sum.tkom  test.tkom
include/: arithmetics.h  block.h  builtin.h  builtin_defines.h  builtin_helpers.h  dfa_states.h  exception_handler.h  exception_message.h  exceptions.h  expression.h  function.h  handler_manager.h  handlers.h  input_manager.h  input_stream.h  interpreter.h  interpreter_helpers.h  interpreter_shall.h  keyword_map.h  lexeme_context.h  lexer.h  local_function.h  node.h  operator_map.h  operators.h  parser.h  parser_visitor.h  position.h  position_manager.h  print_error.h  program.h  special_sign_map.h  statement.h  statement_specific.h  tkom_interpreter.h  token.h  tokenizer.h  tokens.h  type.h  type_cast.h  (+2 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_6.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  (+85 more)
src/: exception_message.cpp  exceptions.cpp  handler_manager.cpp  handlers.cpp  keyword_map.cpp  lexeme_context.cpp  lexer.cpp  lexer_main.cpp  operator_map.cpp  parser_main.cpp  position.cpp  tkom.cpp  tokenizer.cpp  visitor.cpp
src/exceptions/: exception_handler.cpp  exceptions.cpp  print_error.cpp
src/handlers/: handlers.cpp
src/input/: input_manager.cpp  input_stream.cpp
src/interpreter/: builtin_helpers.cpp  builtins.cpp  interpreter.cpp  interpreter_expr.cpp  interpreter_helpers.cpp  local_function.cpp  tkom_interpreter.cpp
src/maps/: keyword_map.cpp  operator_map.cpp  special_sign_map.cpp
src/parser/: block.cpp  expression.cpp  function.cpp  operators.cpp  parser.cpp  parser_visitor.cpp  program.cpp  statement.cpp  type.cpp  variable.cpp  visitor.cpp
src/position/: position.cpp  position_manager.cpp
src/token/: token.cpp  tokens.cpp
src/tokenizer/: tokenizer.cpp
tests/: CMakeLists.txt  dfa_test.cc  interpreter_test.cc  lexer_all_tokens_test.cc  lexer_test.cc  operator_dfa_test.cc  parser_parametrized_test.cc  parser_test.cc  tokenizer_test.cc
tests/include/: parser_test_counter.h
